# tapl-hs

./: .gitignore  LICENSE  stack.yaml  tapl-hs.cabal
arith/: Main.hs
arith/Arith/: Eval.hs  Lexer.hs  Parser.hs  Syntax.hs  Token.hs
