cabal-version:       2.2

name:                tapl-hs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/RishabhRD/tapl-hs#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rishabh Dwivedi
maintainer:          rishabhdwivedi17@gmail.com
copyright:           Rishabh Dwivedi
category:            interpreter
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable arith
  hs-source-dirs:      arith
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Arith.Eval Arith.Syntax Arith.Lexer Arith.Token
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
